--- a/i3/.config/lemonbar/config
+++ b/i3/.config/lemonbar/config
@@ -23,16 +23,16 @@ gapSize=$(awk '/gaps inner/ {print $3}' ${i3config})
 # Workspace names -- independant from i3 config -- workspaces in i3 config should be named numbers 1-10.
 workspaceNames=(
     ""               # 0 (No such workspace)
-    "Web Browser"    # 1
+    "Browser"        # 1
     "Terminal"       # 2
-    "Text Editor"    # 3
-    "Unspecified"    # 4
-    "Unspecified"    # 5
-    "Unspecified"    # 6
-    "Unspecified"    # 7
-    "Unspecified"    # 8
-    "Messenger"      # 9
-    "Music Player"   # 10
+    "Editor"         # 3
+    "---"            # 4
+    "---"            # 5
+    "---"            # 6
+    "---"            # 7
+    "---"            # 8
+    "---"            # 9
+    "Player"         # 10
 )
 
 # Fonts
