--- a/i3/.config/lemonbar/config
+++ b/i3/.config/lemonbar/config
@@ -26,12 +26,12 @@ workspaceNames=(
     "Browser"        # 1
     "Terminal"       # 2
     "Editor"         # 3
-    "---"            # 4
-    "---"            # 5
-    "---"            # 6
-    "---"            # 7
-    "---"            # 8
-    "---"            # 9
+    "None"           # 4
+    "None"           # 5
+    "None"           # 6
+    "None"           # 7
+    "None"           # 8
+    "None"           # 9
     "Player"         # 10
 )
 
