Reverted white color back to foreground color.

--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -38,7 +38,7 @@ color11 = #FAC863
 color12 = #6699CC
 color13 = #C594C5
 color14 = #5FB3B3
-color15 = #D8DEE9
+color15 = #C0C5CE
 
 # 256 color space
 color16 = #F99157
