Switched window manager from i3 to bspwm. Switched browser from chromium to qutebrowser. Heavy work in progress.

--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -47,11 +47,71 @@ clear-keychain ;; leave-mode
 [normal]
 # Keybindings for normal mode.
 
-clear-keychain ;; search
-    <Escape>
+set-cmd-text -s :search
+    <Ctrl-f>
 
 set-cmd-text -s :open
-    o
+    <Ctrl-Space>
+
+set-cmd-text -s :open http://google.com/search?q=
+    <Alt-Space>
+
+tab-close
+    <Ctrl-w>
+
+tab-prev
+    <Ctrl-Left>
+
+tab-next
+    <Ctrl-Right>
+
+tab-focus 1
+    <Alt-1>
+
+tab-focus 2
+    <Alt-2>
+
+tab-focus 3
+    <Alt-3>
+
+tab-focus 4
+    <Alt-4>
+
+tab-focus 5
+    <Alt-5>
+
+tab-focus 6
+    <Alt-6>
+
+tab-focus 7
+    <Alt-7>
+
+tab-focus 8
+    <Alt-8>
+
+tab-focus 9
+    <Alt-9>
+
+reload
+    <F5>
+
+back
+    <Alt-Left>
+
+forward
+    <Alt-Right>
+
+fullscreen
+    <F11>
+
+bookmark-add
+    <Ctrl-d>
+
+open qute:settings
+    <Ctrl-,>
+
+clear-keychain ;; search
+    <Escape>
 
 set-cmd-text :open {url}
     go
@@ -78,10 +138,6 @@ open -t
     ga
     <Ctrl-T>
 
-tab-close
-    d
-    <Ctrl-W>
-
 tab-close -o
     D
 
@@ -90,7 +146,6 @@ tab-only
 
 tab-focus
     J
-    gt
 
 tab-move
     gm
@@ -101,21 +156,11 @@ tab-move -
 tab-move +
     gr
 
-tab-prev
-    K
-    gT
-
 tab-clone
     gC
 
-reload
-    r
-
 reload -f
     R
-
-back
-    H
 
 back -t
     th
@@ -123,17 +168,11 @@ back -t
 back -w
     wh
 
-forward
-    L
-
 forward -t
     tl
 
 forward -w
     wl
-
-fullscreen
-    <F11>
 
 hint
     f
@@ -268,9 +307,6 @@ set-cmd-text -s :quickmark-load -t
 set-cmd-text -s :quickmark-load -w
     wb
 
-bookmark-add
-    M
-
 set-cmd-text -s :bookmark-load
     gb
 
@@ -340,6 +376,9 @@ download-clear
 view-source
     gf
 
+set-cmd-text -s :buffer
+    gt
+
 tab-focus last
     <Ctrl-Tab>
 
@@ -361,33 +400,6 @@ scroll-page 0 0.5
 scroll-page 0 -0.5
     <Ctrl-U>
 
-tab-focus 1
-    <Alt-1>
-
-tab-focus 2
-    <Alt-2>
-
-tab-focus 3
-    <Alt-3>
-
-tab-focus 4
-    <Alt-4>
-
-tab-focus 5
-    <Alt-5>
-
-tab-focus 6
-    <Alt-6>
-
-tab-focus 7
-    <Alt-7>
-
-tab-focus 8
-    <Alt-8>
-
-tab-focus 9
-    <Alt-9>
-
 home
     <Ctrl-h>
 
@@ -396,9 +408,6 @@ stop
 
 print
     <Ctrl-Alt-p>
-
-open qute:settings
-    Ss
 
 follow-selected
     <Return>
@@ -418,9 +427,13 @@ follow-selected -t
 # supported in this mode.
 # Useful hidden commands to map in this section:
 #  * `open-editor`: Open a texteditor with the focused field.
+#  * `paste-primary`: Paste primary selection at cursor position.
 
 open-editor
     <Ctrl-E>
+
+paste-primary
+    <Shift-Ins>
 
 [hint]
 # Keybindings for hint mode.
