Simplified screenshot tool. Added screenshot key to sxhkd. Fixed issue with gap size and window borders.

--- a/wm/.config/lemonbar/.config
+++ b/wm/.config/lemonbar/.config
@@ -22,6 +22,7 @@ screenWidth=$(xrandr | awk '/Screen 0/ {print $8}')
 screenHeight=$(xrandr | awk '/Screen 0/ {print $10}' | tr -d ",")
 
 gapSize=16
+borderSize=3
 
 panelHeight=$((${gapSize} * 2))
 panelWidth=$((${screenWidth} - ${panelHeight}))
