More organization of universal config.

--- a/wm/.config/lemonbar/.config
+++ b/wm/.config/lemonbar/.config
@@ -1,5 +1,8 @@
 #!/bin/sh
 
+# Import config files.
+. ~/.universal
+
 # Select which blocks are displayed on the status bar.
 selectedBlocks=(
     "network"
@@ -17,9 +20,6 @@ iconFont="FontAwesome"
 
 # Bar panel settings
 separator="%{F$foreground}   |   "
-
-screenWidth=$(xrandr | awk '/Screen 0/ {print $8}')
-screenHeight=$(xrandr | awk '/Screen 0/ {print $10}' | tr -d ",")
 
 gapSize=16
 borderSize=3
