Added transparency and cancellation hotkey for bspwm preselection.

--- a/wm/.config/compton/compton.conf
+++ b/wm/.config/compton/compton.conf
@@ -5,4 +5,6 @@ clear-shadow = true;
 shadow-radius = 6;
 shadow-offset-x = -5;
 shadow-offset-y = -5;
-shadow-exclude = [ "class_g = 'conky'" ];
+
+# Opacity
+opacity-rule = [ "50:class_g = 'Bspwm' && class_i = 'presel_feedback'" ]; # bspwm preselection area.
