Made lemonbar look more interesting. Made reload hotkey more thorough.

--- a/wm/.config/lemonbar/.config
+++ b/wm/.config/lemonbar/.config
@@ -19,7 +19,7 @@ font="InputSans"
 iconFont="FontAwesome"
 
 # Bar panel settings
-separator="%{F$foreground}   |   "
+separator="%{F$cyan}      "
 
 gapSize=16
 borderSize=3
