Added a hacky atom theme that I stole. Changed color scheme.

--- a/wm/.config/lemonbar/.config
+++ b/wm/.config/lemonbar/.config
@@ -19,7 +19,7 @@ font="InputSans"
 iconFont="FontAwesome"
 
 # Bar panel settings
-separator="%{F$cyan}      "
+separator="%{F$magenta}   ::   "
 
 gapSize=16
 borderSize=3
