--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -14,36 +14,25 @@ cursor_blink = on
 cursor_shape = ibeam
 
 [colors]
-# Base16 OceanicNext
-# Scheme: https://github.com/voronianski/oceanic-next-color-scheme
-
-foreground      = #C0C5CE
-foreground_bold = #C0C5CE
-cursor          = #C0C5CE
-background      = #1B2B34
+foreground      = #c4c4b5
+foreground_bold = #c4c4b5
+cursor          = #c4c4b5
+background      = #2b3135
 
 # 16 color space
-color0  = #1B2B34
-color1  = #EC5f67
-color2  = #99C794
-color3  = #FAC863
-color4  = #6699CC
-color5  = #C594C5
-color6  = #5FB3B3
-color7  = #C0C5CE
-color8  = #65737E
-color9  = #EC5f67
-color10 = #99C794
-color11 = #FAC863
-color12 = #6699CC
-color13 = #C594C5
-color14 = #5FB3B3
-color15 = #C0C5CE
-
-# 256 color space
-color16 = #F99157
-color17 = #AB7967
-color18 = #343D46
-color19 = #4F5B66
-color20 = #A7ADBA
-color21 = #CDD3DE
+color0  = #2b3135
+color1  = #a66959
+color2  = #769070
+color3  = #ac8d6e
+color4  = #607a86
+color5  = #80757e
+color6  = #60867f
+color7  = #c4c4b5
+color8  = #4c5356
+color9  = #a66959
+color10 = #769070
+color11 = #ac8d6e
+color12 = #607a86
+color13 = #80757e
+color14 = #60867f
+color15 = #c4c4b5
