--- a/atom/.atom/packages/quickdraw/package.json
+++ b/atom/.atom/packages/quickdraw/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/caleb/quickdraw-syntax-atom.git"
+    "url": "git+https://github.com/wulfre/dotfiles/atom/.atom/quickdraw.git"
   },
   "license": "MIT",
   "engines": {
