--- a/atom--home/.atom/packages/quickdraw/package.json
+++ b/atom--home/.atom/packages/quickdraw/package.json
@@ -2,29 +2,14 @@
   "name": "quickdraw",
   "theme": "syntax",
   "version": "1.0.0",
-  "description": "A theme for atom that is quick and simple to configure",
-  "keywords": [
-    "modular",
-    "syntax"
-  ],
+  "description": "A hacky theme for atom that uses only a few colors.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wulfre/dotfiles/atom/.atom/quickdraw.git"
+    "url": "git+https://github.com/wulfre/fakerepo.git"
   },
-  "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "readme": "# quickdraw Syntax Theme for Atom 1.0\n\nA quickdraw theme for Atom that adheres to the vim theme. Easy on the eyes, beautiful theme.\n\nA big thanks to Isaac Hess for creating the [original quickdraw theme for Atom](https://github.com/isaachess/quickdraw-atom) on which this is based.\n\nBased on [https://github.com/morhetz/quickdraw](https://github.com/morhetz/quickdraw).\n\n![Screenshot](https://raw.githubusercontent.com/caleb/quickdraw-syntax-atom/master/quickdraw.png)\n",
-  "readmeFilename": "README.md",
-  "bugs": {
-    "url": "https://github.com/caleb/quickdraw-syntax-atom/issues"
-  },
-  "homepage": "https://github.com/caleb/quickdraw-syntax-atom#readme",
-  "_id": "quickdraw@1.0.5",
-  "_shasum": "28a18460f21648cba25098fb5ab0e6639b5cff10",
-  "_resolved": "file:../d-116317-4759-hz7u3q/package.tgz",
-  "_from": "../d-116317-4759-hz7u3q/package.tgz",
   "_atomModuleCache": {
     "version": 1,
     "dependencies": [],
