Moved universal config out of the x folder and into a misc folder. Defined an accent color in the universal config.

--- a/lemonbar--home/.config/lemonbar/.config
+++ b/lemonbar--home/.config/lemonbar/.config
@@ -14,7 +14,7 @@ selectedBlocks=(
 )
 
 # Bar panel settings
-separator="%{F$magenta}   ::   "
+separator="%{F${accent}}   ::   "
 
 gapSize=16
 borderSize=4
