--- a/compton--home/.config/compton/compton.conf
+++ b/compton--home/.config/compton/compton.conf
@@ -1,5 +1,6 @@
 # Shadow
 shadow = true;
+shadow-opacity = 0.4;
 no-dock-shadow = false;
 clear-shadow = true;
 shadow-radius = 6;
@@ -8,3 +9,14 @@ shadow-offset-y = -5;
 
 # Opacity
 opacity-rule = [ "60:class_g = 'Bspwm' && class_i = 'presel_feedback'" ]; # bspwm preselection area.
+#frame-opacity = 0.6; # opacity of window borders
+
+## Extras
+use-ewmh-active-win = false;
+detect-client-opacity = true;
+sw-opti = true;
+backend = "glx"
+detect-transient = true;
+detect-client-leader = true;
+shadow-ignore-shaped = true;
+detect-rounded-corners = true;
