Small tweaks to colors and lemonbar text.

--- a/compton--home/.config/compton/compton.conf
+++ b/compton--home/.config/compton/compton.conf
@@ -1,6 +1,5 @@
 # Shadow
 shadow = true;
-shadow-opacity = 0.4;
 no-dock-shadow = false;
 clear-shadow = true;
 shadow-radius = 6;
@@ -9,7 +8,9 @@ shadow-offset-y = -5;
 
 # Opacity
 opacity-rule = [ "60:class_g = 'Bspwm' && class_i = 'presel_feedback'" ]; # bspwm preselection area.
-#frame-opacity = 0.6; # opacity of window borders
+# frame-opacity = 0.6; # opacity of window borders
+# shadow-opacity = 0.4;
+
 
 ## Extras
 use-ewmh-active-win = false;
