Added a sleep to lemonbar to prevent over-working.

--- a/compton--home/.config/compton/compton.conf
+++ b/compton--home/.config/compton/compton.conf
@@ -8,8 +8,8 @@ shadow-offset-y = -5;
 
 # Opacity
 opacity-rule = [ "60:class_g = 'Bspwm' && class_i = 'presel_feedback'" ]; # bspwm preselection area.
-# frame-opacity = 0.6; # opacity of window borders
-# shadow-opacity = 0.4;
+# frame-opacity = 0.9; # opacity of window borders
+shadow-opacity = 0.9;
 
 
 ## Extras
