--- a/lemonbar--home/.config/lemonbar/.config
+++ b/lemonbar--home/.config/lemonbar/.config
@@ -3,9 +3,9 @@
 # Import config files.
 . ~/.universal
 
-# Select which blocks are displayed on the status bar.
+# Status bar settings. Comment out blocks you do not want to use.
 selectedBlocks=(
-    "network"
+#   "network"
     "dropbox"
     "volume"
 #   "battery"
@@ -13,12 +13,13 @@ selectedBlocks=(
     "clock"
 )
 
-# Bar panel settings
+# Universal bar settings.
 separator="%{F${accent}}   ::   "
+
+sleepTime=2
 
 gapSize=16
 borderSize=4
-
 panelHeight=$((${gapSize} * 2))
 panelWidth=$((${screenWidth} - ${panelHeight}))
 panelX=${gapSize}
