Shortened default lemonbar sleep time.

--- a/lemonbar--home/.config/lemonbar/.config
+++ b/lemonbar--home/.config/lemonbar/.config
@@ -16,7 +16,8 @@ selectedBlocks=(
 # Universal bar settings.
 separator="%{F${accent}}   ::   "
 
-sleepTime=2
+# Time between bar updates in seconds.
+sleepTime=1s
 
 gapSize=16
 borderSize=4
