Typos in readme.

--- a/lemonbar--home/.config/lemonbar/.config
+++ b/lemonbar--home/.config/lemonbar/.config
@@ -6,6 +6,7 @@
 # Status bar settings. Comment out blocks you do not want to use.
 selectedBlocks=(
 #   "network"
+    "media"
     "dropbox"
     "volume"
 #   "battery"
