Cleaned up xinitrc. Moved both lemonbars to the top of the screen.

--- a/lemonbar--home/.config/lemonbar/.config
+++ b/lemonbar--home/.config/lemonbar/.config
@@ -3,13 +3,10 @@
 # Import config files.
 . ~/.universal
 
-# Status bar settings. Comment out blocks you do not want to use.
+# Status bar blocks to display.
 selectedBlocks=(
-#   "network"
     "media"
-#   "dropbox"
     "volume"
-#   "battery"
     "calendar"
     "clock"
 )
@@ -20,10 +17,14 @@ separator="%{F${accent}}   ::   "
 # Time between bar updates in seconds.
 sleepTime=1s
 
+# Constant variables.
 gapSize=16
 borderSize=4
+
+# Calculated variables.
 panelHeight=$((${gapSize} * 2))
-panelWidth=$((${screenWidth} - ${panelHeight}))
-panelX=${gapSize}
+panelWidth=$((((${screenWidth} - ${panelHeight}) / 2) - (${gapSize} / 2)))
+leftPanelX=${gapSize}
+rightPanelX=$(((${gapSize} * 2) + ${panelWidth}))
 topPanelY=${gapSize}
 bottomPanelY=$((${screenHeight} - ${gapSize} - ${panelHeight}))
